<resources>
    <string name="app_name">Cashcue</string>
    <string name="title_home">Beranda</string>
    <string name="title_stats">Statistik</string>
    <string name="title_settings">Pengaturan</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="cashcue1">cash</string>
    <string name="cashcue2">cue</string>
    <string name="keeping_you1">keeping your</string>
    <string name="keeping_you2">finances</string>
    <string name="keeping_you3">in</string>
    <string name="keeping_you4">your control</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="general">General</string>
    <string name="language">Bahasa</string>
    <string name="currency">Mata Uang</string>
    <string name="change_password">Ubah Password</string>
    <string name="logout">Keluar</string>
    <string name="text_positive_button">Oke</string>
    <string name="text_negative_button">Batal</string>
    <string name="are_u_sure">Apakah Anda yakin?</string>
    <string name="logout_successfully">Anda berhasil Keluar</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="edit_name">Masukkan Nama Baru</string>
    <string name="edit_email">Masukkan Email Baru</string>
    <string name="send">Kirim</string>
    <string name="input_new_password">Masukkan Password Baru</string>
    <string name="label_greeting_user">Hai,</string>
    <string name="label_name">User!</string>
    <string name="anggaranmu">Anggaranmu</string>
    <string name="detail_anggaran">Detail Anggaran</string>
    <string name="input_saldo_anggaran">Input Saldo</string>
    <string name="add_anggaran">Tambah Anggaran</string>
    <string name="delete">Hapus</string>
    <string name="yes">Ya</string>
    <string name="cancel">Batal</string>
    <string name="no_data">Tidak Ada Data</string>
    <string name="date">Tanggal</string>
    <string name="reset_saldo">Reset Saldo</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="saldo_target">Saldo Target</string>
    <string name="simpan">Simpan</string>
    <string name="saldo">Saldo</string>
    <string name="scan_camera">Scan Camera</string>
    <string name="riwayat_keuangan">Riwayat Keuangan</string>
    <string name="klasifikasi">Klasifikasi</string>
    <string name="tabunganku">Tabunganku</string>
    <string name="jenis">Jenis</string>
    <string name="balance">Saldo / Saldo Target</string>
    <string name="reset">Reset</string>
    <string name="input_saldo">Input Saldo</string>
    <string name="edit_anggaran">Edit Anggaran</string>
    <string name="saldo_kamu">Saldo Kamu</string>
    <string name="add">Tambah</string>
    <string name="hemat">HEMAT</string>
    <string name="normal">NORMAL</string>
    <string name="boros">BOROS</string>
    <string name="jenis_harus_dipilih">Jenis harus dipilih</string>
    <string name="nama_harus_diisi">Nama harus diisi</string>
    <string name="saldo_target_harus_diisi">Saldo Target harus diisi</string>
    <string name="saldo_target_tidak_boleh_kurang_dari_rp1000">Saldo Target tidak boleh kurang dari Rp1000</string>
    <string name="anggaran_berhasil_dibuat">Anggaran berhasil dibuat</string>
    <string name="anggaran_berhasil_diupdate">Anggaran berhasil diupdate</string>
    <string name="saldo_berhasil_direset">Saldo berhasil direset</string>
    <string name="saldo_harus_diisi">Saldo harus diisi</string>
    <string name="saldo_anggaran_berhasil_diinput">Saldo Anggaran berhasil diinput</string>
    <string name="gagal_memunculkan_kamera">Gagal memunculkan kamera.</string>
    <string name="gagal_mengambil_gambar">Gagal mengambil gambar.</string>
    <string name="fitur_ini_belum_tersedia">Fitur ini belum tersedia</string>
    <string name="save_successfully">Berhasil disimpan</string>


</resources>