<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.budgeting.detail.DetailBudgetingActivity">

    <TextView
        android:id="@+id/tv_detail_label_jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jenis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_label_jenis"
        tools:text="@string/pemasukan" />

    <TextView
        android:id="@+id/tv_detail_label_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_jenis" />

    <TextView
        android:id="@+id/tv_detail_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_label_nama"
        tools:text="Jajan" />

    <TextView
        android:id="@+id/tv_detail_label_saldo_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_nama" />

    <TextView
        android:id="@+id/tv_reset_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/reset"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_detail_label_saldo_target"
        app:layout_constraintStart_toEndOf="@id/tv_detail_label_saldo_target"
        app:layout_constraintTop_toTopOf="@id/tv_detail_label_saldo_target" />

    <TextView
        android:id="@+id/tv_detail_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_label_saldo_target"
        tools:text="Rp" />

    <TextView
        android:id="@+id/tv_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="/"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_detail_saldo"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_label_saldo_target" />

    <TextView
        android:id="@+id/tv_detail_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_per"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_label_saldo_target"
        tools:text="Rp" />

    <RadioGroup
        android:id="@+id/rg_detail_jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_label_jenis">

        <RadioButton
            android:id="@+id/rb_detail_pemasukan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pemasukan" />

        <RadioButton
            android:id="@+id/rb_detail_pengeluaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/pengeluaran" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_detail_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_detail_jenis">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_detail_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_detail_saldo_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edl_detail_nama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_detail_saldo_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saldo_target"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_detail_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/input_saldo"
        app:layout_constraintEnd_toStartOf="@id/gl_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_target" />

    <Button
        android:id="@+id/btn_detail_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_anggaran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_target" />

    <Button
        android:id="@+id/btn_detail_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/simpan"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edl_detail_saldo_target" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>