<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.budgeting.input.InputBudgetingActivity">

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_date"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/date"
            android:src="@drawable/ic_date"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_input_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/date" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_input_saldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saldo"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_input_scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/scan_camera"
        app:layout_constraintEnd_toStartOf="@id/gl_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edl_input_saldo" />

    <Button
        android:id="@+id/btn_input_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/simpan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_input"
        app:layout_constraintTop_toBottomOf="@+id/edl_input_saldo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>