<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.home.HomeFragment">

        <TextView
            android:id="@+id/tvGreetingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/label_greeting_user"
            android:textColor="@color/primary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/label_name"
            android:textColor="@color/green1"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/tvGreetingName"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGreetingName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green2">

                <TextView
                    android:id="@+id/tv_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/saldo_kamu"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_total_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                    tools:text="Rp3.000.000,00" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_anggaranmu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/anggaranmu"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_saldo" />

        <!--    <Button-->
        <!--        android:id="@+id/button"-->
        <!--        android:layout_width="124dp"-->
        <!--        android:layout_height="74dp"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:layout_marginEnd="16dp"-->
        <!--        android:text="Pemasukan"-->
        <!--        app:cornerRadius="20dp"-->
        <!--        app:layout_constraintEnd_toStartOf="@id/gl_home"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/cv_saldo" />-->

        <!--    <Button-->
        <!--        android:id="@+id/button2"-->
        <!--        android:layout_width="134dp"-->
        <!--        android:layout_height="74dp"-->
        <!--        android:layout_marginStart="16dp"-->
        <!--        android:layout_marginTop="16dp"-->
        <!--        android:text="Pengeluaran"-->
        <!--        app:cornerRadius="20dp"-->
        <!--        app:layout_constraintStart_toEndOf="@id/gl_home"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/cv_saldo" />-->

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/add"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_anggaranmu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_anggaranmu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_budgeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_anggaranmu"
            tools:listitem="@layout/item_budgeting" />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/no_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_anggaranmu" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>